--- a/css/login.css
+++ b/css/login.css
@@ -10,7 +10,7 @@ body {
 }
 
 /* background-image */
-.background {
+.background-login {
     width: 100%;
     height: 100vh;
     background: url(/assets/images/login_bg.jpg) no-repeat;
@@ -20,8 +20,8 @@ body {
 
 }
 
-/* login/signup container */
-.container {
+/* login/signup container-login */
+.container-login {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -35,7 +35,7 @@ body {
     margin-top: 20px;
 }
 
-.container .content {
+.container-login .content {
     position: absolute;
     top: 0;
     left: 0;
@@ -84,7 +84,7 @@ body {
     transform: scale(1.2);
 }
 
-.container .logreg-box {
+.container-login .logreg-box {
     position: absolute;
     top: 0;
     right: 0;
@@ -254,17 +254,17 @@ body {
 }
 
 @media (max-width:1045px) {
-    .container .content {
+    .container-login .content {
         padding: 60px 35px;
     }
 }
 
 @media (max-width:847px) {
-    .container .content {
+    .container-login .content {
         display: none;
     }
 
-    .container .logreg-box {
+    .container-login .logreg-box {
         width: calc(100%);
     }
 
