--- a/css/blog.css
+++ b/css/blog.css
@@ -242,13 +242,6 @@ color: var(--light-color);
     z-index: 5;
 }
 
-.fancy-border span{
-    position: relative;
-    z-index: 10;
-    display: inline-flex;
-    background-color: var(--secondary-background-color);
-    padding: .6rem 1.5rem;
-}
 
 .article{
     position: relative;
@@ -275,20 +268,6 @@ color: var(--light-color);
     z-index: 10;
 }
 
-.article-data-container{
-    width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    border-radius: 10px;
-    padding: 2rem 1.5rem;
-    background-color: var(--transparent-dark-color);
-    z-index: 10;
-    transition: background-color .5s;
-}
-
-
-
 .title{
     color: var(--light-color);
 }
@@ -308,6 +287,8 @@ color: var(--light-color);
     align-items: center;
     text-align: center;
     padding-block: 2.5rem;
+    padding-top: 5rem;
+    margin-bottom: 5rem;
 }
 
 .blog-post-title{
@@ -328,6 +309,7 @@ color: var(--light-color);
 .blog-post-container .container{
     max-width: 90rem;
     padding: 0;
+    font-size: 1.8rem;
     display: flex;
     flex-direction: column;
     gap: var(--gap);
