--- a/css/login.css
+++ b/css/login.css
@@ -28,7 +28,7 @@ body {
     transform: translate(-50%, -50%);
     width: 75%;
     height: 550px;
-    background: url(/assets/images/login_bg.jpg) no-repeat;
+    background: url(Assets/images/login_bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     border-radius: 10px;
