--- a/css/login.css
+++ b/css/login.css
@@ -13,7 +13,7 @@ body {
 .background-login {
     width: 100%;
     height: 100vh;
-    background: url(/assets/images/login_bg.jpg) no-repeat;
+    background: url(/Assets/images/login_bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     filter: blur(10px);
@@ -28,7 +28,7 @@ body {
     transform: translate(-50%, -50%);
     width: 75%;
     height: 550px;
-    background: url(Assets/images/login_bg.jpg) no-repeat;
+    background: url(/Assets/images/login_bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     border-radius: 10px;
@@ -112,10 +112,6 @@ body {
     border-bottom-right-radius: 10px;
     color: #e4e4e4;
 }
-
-/* .form-box.login form{
-    margin-bottom: 33rem;
-} */
 
 .logreg-box .form-box.login {
     transform: translateX(0);
@@ -266,10 +262,6 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
     transition: background-color 9999s ease-in-out 0s;
 }
-
-/* input, textarea {
-    color: #e4e4e4;
-    } */
 
 textarea:focus,
 input:focus {
