--- a/css/profile.css
+++ b/css/profile.css
@@ -73,7 +73,7 @@
      */
 
     --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.25);
-    --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.25);
+    --shadow-2: 0 16px 30px hsla(0, 95%, 63%, 0.25);
     --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.25);
     --shadow-4: 0 25px 50px hsla(0, 0%, 0%, 0.15);
     --shadow-5: 0 24px 80px hsla(0, 0%, 0%, 0.25);
@@ -292,6 +292,7 @@ article.about.active {
     padding: 15px;
     padding-top: 45px;
     border-radius: 14px;
+    /* box-shadow: var(--shadow-2); */
     cursor: pointer;
     z-index: 1;
 }
@@ -557,6 +558,7 @@ main {
     background: var(--border-gradient-onyx);
     padding: 20px;
     border-radius: 14px;
+    /* box-shadow: var(--shadow-2); */
     z-index: 1;
 }
 
