--- a/css/carousel.css
+++ b/css/carousel.css
@@ -143,7 +143,16 @@ margin: 6px;
 }
 
 @media (max-width: 420px){
+
+.img-slider .slide img{
+    /* z-index: 1;
+    width: 100%;
+    max-height: 550px; */
+    border-radius: 30px;
+    }
+
 .img-slider{
+margin-top: 1.2rem;
 width: 320px;
 height: 200px;
 }
@@ -166,4 +175,20 @@ bottom: 10px;
 }
 }
 
+@media (max-width: 380px){
+
+    .img-slider .slide img{
+        /* z-index: 1;
+        width: 100%;
+        max-height: 550px; */
+        border-radius: 30px;
+        }
+    
+    .img-slider{
+    margin-top: 1.2rem;
+    width: 320px;
+    height: 200px;
+    }
+
+}
 
