--- a/css/style.css
+++ b/css/style.css
@@ -423,76 +423,6 @@ padding-block: 6px;
 }
 
 
-
-/* .hero-bg { display: none; } */
-
-/* .hero { padding-block-start: calc(var(--section-padding) + 160px); } */
-
-/* .hero .container {
-display: grid;
-gap: 50px;
-} */
-
-
-
-/* .hero-subtitle {
-font-size: var(--fontSize-6);
-font-weight: var(--weight-bold);
-}
-
-.hero .section-title { margin-block: 20px; }
-
-.hero .hero-text { margin-block-end: 40px; }
-
-.hero .input-wrapper:hover { box-shadow: var(--shadow-2); }
-
-.hero .input-wrapper {
-position: relative;
-padding: 10px;
-padding-inline-start: 20px;
-background-color: var(--bg-prussian-blue);
-border-radius: var(--radius-6);
-border: 1px solid var(--bg-carolina-blue);
-display: flex;
-justify-items: flex-end;
-transition: var(--transition-1);
-}
-
-.hero .input-field { padding-inline-end: 5px; }
-
-.hero-banner { position: relative; }
-
-.hero-banner .w-100 {
-max-width: max-content;
-margin-inline: auto;
-}
-
-.hero .shape {
-position: absolute;
-z-index: -1;
-
-animation: heroDecoAnim 3s linear infinite alternate;
-}
-
-@keyframes heroDecoAnim {
-0% { transform: translateY(40px) rotate(0); }
-100% { transform: translateY(0) rotate(0.4turn); }
-}
-
-.hero .shape-1 {
-top: 50px;
-right: 40px;
-}
-
-.hero .shape-2 {
-bottom: 20px;
-left: 24px;
-}
- */
-
-
-
-
 /*-----------------------------------*\
 #TOPICS
 \*-----------------------------------*/
@@ -969,11 +899,9 @@ transform: translateY(-10px);
 #MEDIA QUERIES
 \*-----------------------------------*/
 
-/**
-* responsive for large than 575px screen
-*/
 
-/* @media (min-width: 360px) {
+
+@media (max-width: 420px) {
     .hero .carousel {
         height: 25vh;
         width: 100vw;
@@ -983,8 +911,13 @@ transform: translateY(-10px);
         justify-content: center;
         align-items: center;
     }
-} */
 
+
+}
+
+/**
+* responsive for large than 575px screen
+*/
 @media (min-width: 575px) {
 
 :root {
