--- a/css/carousel.css
+++ b/css/carousel.css
@@ -145,16 +145,16 @@ margin: 6px;
 @media (max-width: 420px){
 
 .img-slider .slide img{
-    /* z-index: 1;
-    width: 100%;
-    max-height: 550px; */
+    margin-top: 1rem;
+    max-height: 200px;
     border-radius: 30px;
     }
 
 .img-slider{
-margin-top: 1.2rem;
-width: 320px;
-height: 200px;
+margin-top: 3.5rem;
+margin-bottom: 7rem;
+width: 370px;
+height: 180px;
 }
 
 .img-slider .slide .info{
@@ -162,7 +162,7 @@ padding: 5px 10px;
 }
 
 .img-slider .slide .info h2{
-font-size: 25px;
+font-size: 20px;
 }
 
 .img-slider .slide .info p{
